--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>15 july 2001</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>ibramost.netlify.app</span>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>ibramoha.netlify.app</span>
                   </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+254 799 477541</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Nairobi, Kenya</span></li>
@@ -289,7 +289,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Prefessional Certificare </h4>
+              <h4>Professional Certificate </h4>
               <h5>2022 - 2023</h5>
               <p><em>Tunapanda Institute, Nairobi, Kenya</em></p>
               <p>Graphic Gesigner, Web Devolopment and Entrepreneur</p>
